--- a/css/styles.css
+++ b/css/styles.css
@@ -59,9 +59,9 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 }
 
 body {
-  margin: 0;
+  margin: 0;/*
   font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-size: 1rem;
+  */font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
@@ -437,6 +437,11 @@ mark,
   background-color: #fcf8e3;
 }
 
+@font-face {
+  font-family: Marcellus;
+  src: url(../font/Marcellus/Marcellus-Regular.ttf);
+}
+
 .list-unstyled {
   padding-left: 0;
   list-style: none;
@@ -546,6 +551,44 @@ pre code {
   margin-right: auto;
   margin-left: auto;
 }
+
+/**
+ * Nuevos estilos
+ */
+
+.t-0 { top: 0 }
+.b-0 { bottom: 0 }
+.l-0 { left: 0 }
+.r-0 { right: 0 }
+
+
+.navtop {
+  color: white;
+}
+
+.navtop > span > svg {
+  margin: 0 5px;
+}
+
+.slogan {
+  font-size: 70px;
+  width: 250px;
+  margin: 0;
+  line-height: 1;
+}
+
+.slogan>span {
+  font-family: Marcellus;
+}
+
+#ebook {
+  background-color: #f9eadf
+}
+
+/**
+ * End Nuevos estilos
+ */
+
 @media (min-width: 576px) {
   .container {
     max-width: 540px;
@@ -2471,18 +2514,20 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #fed136;
-  border-color: #fed136;
+  background-color: #e7455f;
+  border-color: #e7455f;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+  border-radius: unset;
 }
 .btn-primary:hover {
   color: #fff;
-  background-color: #fec810;
-  border-color: #fec503;
+  background-color: #e7455fc9;
+  border-color: #e7455fc9;
 }
 .btn-primary:focus, .btn-primary.focus {
   color: #fff;
-  background-color: #fec810;
-  border-color: #fec503;
+  background-color: #e7455fc9;
+  border-color: #e7455fc9;
   box-shadow: 0 0 0 0.2rem rgba(254, 216, 84, 0.5);
 }
 .btn-primary.disabled, .btn-primary:disabled {
@@ -10013,6 +10058,8 @@ p {
   font-size: 2.5rem;
   margin-top: 0;
   margin-bottom: 1rem;
+  font-family: Marcellus;
+  color: #e7455f;
 }
 .page-section h3.section-subheading {
   font-size: 1rem;
@@ -10105,7 +10152,7 @@ img::-moz-selection {
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
     border: none;
-    background-color: transparent;
+    background-color: #cfcfcf;
     transition: padding-top 0.3s ease-in-out, padding-bottom 0.3s ease-in-out;
   }
   #mainNav .navbar-brand {
@@ -10113,7 +10160,7 @@ img::-moz-selection {
     transition: font-size 0.3s ease-in-out;
   }
   #mainNav .navbar-brand img {
-    height: 2rem;
+    height: 4rem;
     transition: height 0.3s ease-in-out;
   }
   #mainNav.navbar-shrink {
@@ -10140,7 +10187,7 @@ header.masthead {
   padding-bottom: 6rem;
   text-align: center;
   color: #fff;
-  background-image: url("../assets/img/header-bg.jpg");
+  background-image: url("../assets/img/header-bg.png");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -10163,8 +10210,8 @@ header.masthead .masthead-heading {
 
 @media (min-width: 768px) {
   header.masthead {
-    padding-top: 17rem;
-    padding-bottom: 12.5rem;
+    padding-top: 27rem;
+    padding-bottom: 15rem;
   }
   header.masthead .masthead-subheading {
     font-size: 2.25rem;
@@ -10445,13 +10492,14 @@ header.masthead .masthead-heading {
 }
 
 section#contact {
-  background-color: #212529;
-  background-image: url("../assets/img/map-image.png");
-  background-repeat: no-repeat;
+  background-color: #ffffff;
+  background-image: url("../assets/img/map-image.svg");
+  background-repeat: repeat;
   background-position: center;
 }
 section#contact .section-heading {
-  color: #fff;
+  font-family: Marcellus;
+  color: #e7455f
 }
 section#contact form#contactForm .form-group {
   margin-bottom: 1.5rem;
@@ -10459,9 +10507,16 @@ section#contact form#contactForm .form-group {
 section#contact form#contactForm .form-group input,
 section#contact form#contactForm .form-group textarea {
   padding: 1.25rem;
+  border-radius: unset;
+  height: auto;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+  border: unset;
 }
 section#contact form#contactForm .form-group input.form-control {
+  border-radius: unset;
   height: auto;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+  border: unset;
 }
 section#contact form#contactForm .form-group-textarea {
   height: 100%;
