adiccion de la seccion de asesorias

--- a/css/styles.css
+++ b/css/styles.css
@@ -641,6 +641,15 @@ div#ebookDiv form#ebookForm .form-group input.form-control {
 .asesorias>img {
   border-radius: 50%;
 }
+
+.textModal p {
+  margin-bottom: unset !important;
+  text-align: justify;
+}
+
+.textModal ol, ul {
+  text-align: justify;
+}
 /**
  * End Nuevos estilos
  */
@@ -10243,7 +10252,7 @@ header.masthead {
   padding-bottom: 6rem;
   text-align: center;
   color: #fff;
-  background-image: url("../assets/img/header-bg.png");
+  background-image: url("../assets/img/header-bg.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -10331,8 +10340,7 @@ header.masthead .masthead-heading {
   max-width: 100vw;
 }
 .portfolio-modal .modal-content {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
+  padding: 0;
   text-align: center;
 }
 .portfolio-modal .modal-content h2 {
@@ -10549,9 +10557,10 @@ header.masthead .masthead-heading {
 
 section#contacto {
   background-color: #ffffff;
-  background-image: url("../assets/img/map-image.svg");
+  background-image: url("../assets/img/map-image.png");
   background-repeat: repeat;
-  background-position: center;
+  background-position: center center;
+  background-size: contain;
 }
 section#contacto .section-heading {
   font-family: Marcellus;
