--- a/css/styles.css
+++ b/css/styles.css
@@ -4109,7 +4109,7 @@ input[type=button].btn-block {
   display: inline-block;
   padding-top: 0.3125rem;
   padding-bottom: 0.3125rem;
-  margin-right: 1rem;
+  margin-right: 0;
   font-size: 1.25rem;
   line-height: inherit;
   white-space: nowrap;
@@ -10241,7 +10241,9 @@ img::-moz-selection {
     height: 2.5rem;
   }
   #mainNav .navbar-nav .nav-item {
-    margin-right: 1rem;
+    width: 125px !important;
+    text-align: center;
+
   }
   #mainNav .navbar-nav .nav-item:last-child {
     margin-right: 0;
