--- a/css/styles.css
+++ b/css/styles.css
@@ -2682,7 +2682,7 @@ fieldset:disabled a.btn {
   color: #fff;
   background-color: #e7455fc9;
   border-color: #e7455fc9;
-  box-shadow: 0 0 0 0.2rem rgba(254, 216, 84, 0.5);
+  box-shadow: 0 0 0 0.2rem #fe545480;
 }
 .btn-primary.disabled, .btn-primary:disabled {
   color: #fff;
@@ -2691,11 +2691,11 @@ fieldset:disabled a.btn {
 }
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #fec503;
-  border-color: #f3bd01;
+  background-color: #e7455f;
+  border-color: #e7455f;
 }
 .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(254, 216, 84, 0.5);
+  box-shadow: 0 0 0 0.2rem #fe545480;
 }
 
 .btn-secondary {
