--- a/css/styles.css
+++ b/css/styles.css
@@ -654,7 +654,7 @@ pre code {
   background-size: 100% 100%;
 }
 
-#disenoNew > h1, h2, h3, h4, h5, h6, span, p {
+.fontBaskevill {
   font-family: Baskvill;
 }
 
