--- a/css/styles.css
+++ b/css/styles.css
@@ -623,8 +623,8 @@ pre code {
   width: 500px;
   margin: 0;
   line-height: 1;
-  text-shadow: 3px 3px 3px #e8465f96;
-  color: #e8465f;
+  text-shadow: 3px 3px 3px #cfcfcf;
+  color: #ffffff;
   bottom: 35px;
   right: 15px
 }
@@ -735,6 +735,10 @@ sup {
   color: white
 }
 
+#miporque>.row>p {
+  font-size: 1.25rem
+}
+
 #ebookDiv {
   display: flex;
   align-items: center;
@@ -797,7 +801,7 @@ div#ebookDiv form#ebookForm .form-group input.form-control {
 }
 
 .asesorias {
-  width: 20%;
+  width: 30%;
   background: #e3d0c6;
   padding: 1rem;
   border-radius: 50%;
