otros cambios mas solo falta el responsive en mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -10177,7 +10177,8 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .text-muted {
-  color: #6c757d !important;
+  color: #000 !important;
+  text-align: justify !important;
 }
 
 .text-black-50 {
