--- a/css/styles.css
+++ b/css/styles.css
@@ -846,7 +846,7 @@ div#ebookDiv form#ebookForm .form-group input.form-control {
   font-family: 'Kitahara'
 }
 
-span.msgForm {
+.msgForm {
     color: white;
     font-size: 29px;
     text-shadow: 3px 3px 5px #333333;
