mas putos cambios njda

--- a/css/media-styles.css
+++ b/css/media-styles.css
@@ -41,6 +41,9 @@
 	.asesoriasText {
 		padding: 0 1rem !important;
 	}
+	.asesoriasText > p {
+	    text-align: center !important;
+	}
 }
 
 @media only screen and (max-width: 425px) {
