--- a/css/media-styles.css
+++ b/css/media-styles.css
@@ -1,3 +1,9 @@
+@media only screen and (max-width: 1440px) {
+	.imgMobile {
+		display: none;
+	}
+}
+
 @media only screen and (max-width: 768px) {
 	.slogan {
 		font-size: 35px;
@@ -23,7 +29,20 @@
 	}
 	.col-lg-6.aboutMe > p {
 		margin: 0 auto !important;
-    	padding: 0 2rem!important
+    	padding: 0 2rem!important;
+    	text-align: center !important;
+	}
+	.imgMobile {
+		display: block !important;
+	}
+	.imgPrin {
+		display: none !important
+	}
+	.asesoriasText {
+		padding: 0 1rem !important;
+	}
+	.asesoriasText > p {
+	    text-align: center !important;
 	}
 }
 
@@ -35,7 +54,8 @@
 	    right: 0;
 	}
 	.imageEbook > img {
-	    width: 55% !important;
+	    width: 75% !important;
+		padding: 1rem;
 	}
 	.ebookText>span:nth-child(1) {
     	font-size: 3rem !important;
@@ -48,6 +68,16 @@
 	}
 	#miporque>.row>p{
 		text-align: center !important;
+	}
+	.row > .titleDisenoNew {
+		color: #ea465f;
+		font-family: Baskvill;
+		font-size: 2rem;
+		margin-bottom: 10px !important;
+		text-align: center !important;
+	}
+	.slick-slide>div>div>p {
+	  height: 450px !important
 	}
 }
 
